# see3cam_trigger

./: CMakeLists.txt  README.md  package.xml
include/see3cam_trigger/: see3cam_trigger_node.h
launch/: see3cam_trigger.launch
src/see3cam_trigger/: see3cam_trigger_node.cpp
udev/: 99-trigger-gpio.rules
