<?xml version="1.0"?>
<package>
  <name>see3cam_trigger</name>
  <version>0.0.0</version>
  <description>The see3cam_trigger package</description>

  <maintainer email="sean@rollinsonwalters.com">Sean Walters</maintainer>

  <license>TODO</license>

  <author email="sean@rollinsonwalters.com">Sean Walters</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>


  <export>
  </export>
</package>